<resources>
    <string name="app_name">Doc On Call</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="alarm">Alarm</string>
    <string name="logout_and_exit">Logout and Exit</string>
    <string name="about">About</string>
    <string name="panic">PANIC</string>
    <string name="feedback">FeedBack</string>
    <string name="emergency">EMERGENCY</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set_the_daily_time_of_your_medicine">Set the daily time of your medicine</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="medical_form">MEDICAL FORM</string>
    <string name="full_name">Full Name:</string>
    <string name="gmail_phone_no">Gmail/Phone No.:</string>
    <string name="age">Age:</string>
    <string name="gender_m_f">Gender(M/F):</string>
    <string name="city_zip_code">City(Zip Code):</string>
    <string name="symptoms">Symptoms:</string>
    <string name="any_major_surgery_in_past_n_if_yes_then_name_it">Any Major surgery in past  (If Yes then name it):</string>
    <string name="submit">submit</string>
    <string name="sign_in_using_google">Sign In using Google</string>
    <string name="or">OR</string>
    <string name="login_through_phone_no">Login through Phone No.</string>
    <string name="login">LOGIN</string>
    <string name="select_city">SELECT CITY</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="verify">Verify</string>
    <string name="share">Share</string>
    <string name="hospitals_near_by_me">Hospitals near by ME</string>
</resources>