<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homepage"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share"/>
        <item
            android:id="@+id/alarm"
            android:icon="@drawable/ic_baseline_alarm_24"
            android:title="@string/alarm"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout"
            android:title="@string/logout_and_exit"/>
    </group>


</menu>