<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFF"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:src="@drawable/untitled" />

    </LinearLayout>

    <com.google.android.gms.common.internal.SignInButtonImpl
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:layout_margin="30dp"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:text="@string/sign_in_using_google" />
    <TextView

        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/or"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="40dp"
            android:text="@string/login_through_phone_no"
            android:textColor="#444444"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp">

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:enabled="false"
                android:paddingLeft="10dp"
                android:text="+91"
                android:textColor="#1F1F1F" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textColor="#1F1F1F" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="#6372FF"

            android:text="@string/login"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>